# intro-to-data-science

./: .gitignore  README.md  pyproject.toml
src/week2/: 01-numpy.ipynb  02-panda.ipynb  03-exercise.ipynb
src/week3/: 01-matplot-and-seaborn.ipynb  02-scraping.ipynb  03-files.ipynb  04-exercise.ipynb
src/week4/: 01-kdd.ipynb  02-preprocessing.ipynb  03-exercise.ipynb
src/week5/: 01-week5.md  02-exercise.ipynb
src/week6/: 01-knn.ipynb
src/week7/: 01-knn-again.ipynb
